syntax = "proto3";

package booking.v1;

option go_package = "api/booking/v1;bookingv1";

import "booking/v1/rpc/create_booking.proto";
import "booking/v1/rpc/get_bookings.proto";
import "booking/v1/rpc/get_booking.proto";
import "booking/v1/rpc/get_booking_rooms.proto";
import "booking/v1/rpc/get_booking_room.proto";

service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);
  rpc GetBookings(GetBookingsRequest) returns (GetBookingsResponse);
  rpc GetBooking(GetBookingRequest) returns (GetBookingResponse);
  rpc GetBookingRooms(GetBookingRoomsRequest) returns (GetBookingRoomsResponse);
  rpc GetBookingRoom(GetBookingRoomRequest) returns (GetBookingRoomResponse);
}